--- a/content.tex
+++ b/content.tex
@@ -3,11 +3,11 @@
 \subsection{Was ist CAN?}
 	
 Das Controller Area Network ist ein serielles Bus System und wurde
-1983, zur Vernetzung von Steuergeräten in Automobilen, von der Firma
+1983 zur Vernetzung von Steuergeräten in Automobilen von der Firma
 Bosch GmbH entwickelt. Doch nicht nur in der Automobilindustrie,
-sondern auch in der Medizintechnick, Flug- und Raumfahrttechnik sowie
+sondern auch in der Medizintechnik, Flug- und Raumfahrttechnik sowie
 in Aufzuganlagen und im Schiffsbau, kann man auf einen CAN Bus stoßen
-\citep[nach][]{WI1}. Der Vorteil gegüber der herkömmlichen Verkablung
+\citep[nach][]{WI1}. Der Vorteil gegenüber der herkömmlichen Verkablung
 lag darin, das mehrere Knoten über dieselbe Leitung Kommunizieren
 können. Alle Teilnehmer können Pakete priorisiert mit
 Kollisionserkennung auf den Bus legen, hierbei wird die Nachricht,
@@ -33,7 +33,7 @@ Part 6: High-speed medium access unit with selective wake-up functionality
 
 \subsubsection{Übertragungsgeschwindigkeiten}
 
-Aufgrund der Ausbreitungsgeschwindigkeit der Signale auf dem Bus, ist die 
+Aufgrund der Ausbreitungsgeschwindigkeit der Signale auf dem Bus ist die 
 Übetragungsgeschwindigkeit von der Leitungslänge abhängig. Die Tabelle 
 \ref{tab:speed} beinhaltet eine Zuordnung von Leitungslängen und deren 
 maximaler Übertragunsgeschwindigkeit und andersrum.
@@ -104,7 +104,7 @@ und für das Acknowledgement, unterscheidet man zwischen einem dominanten und ei
 rezessiven Buspegel. Der dominante Buspegel entspricht der logischen ``0''. Der rezessive 
 Buspegel entspricht der logischen ``1''. 
 
-Wenn versciedene Teilnehmer gleichzeitig einen dominanten und einen rezessiven Pegel senden, 
+Wenn verschiedene Teilnehmer gleichzeitig einen dominanten und einen rezessiven Pegel senden, 
 so überschreibt immer der dominante Pegel den rezessiven Pegel auf dem CAN-Bus (siehe 
 Kapitel \ref{sec:access}). Der rezessive Buspegel stellt sich nur dann ein, wenn alle CAN-Knoten 
 rezessiv senden. 
@@ -131,7 +131,7 @@ Bit-Stuffing beim CAN-Bus bedeutet, dass
 nach 5 Bits mit gleichem Pegel ein ">Stuff Bit"< mit inversem Pegel
 eingefügt wird. Die Empfänger filtern diese Stuff-Bits, dann nach dem
 gleichen Schema wieder heraus.
-\\ Bit stuffing wird einerseits
+\\ Bit Stuffing wird einerseits
 eingesetzt, weil Bitfolgen mit mehr als 5 Bits mit gleichem Pegel für
 Steuerungszwecke eingesetzt werden, und andererseits auch wegen der
 NRZ-Kodierung. Das heißt dass der Pegel bei zB 4 rezessiven Bits
@@ -165,7 +165,7 @@ eines Daten Frames kann aus Abbildung \ref{data} entnommen werden.
 		
 Gestarted wird ein Frame durch das \textbf{SOF} (start-of-frame)
 bestehend aus einem dominanten Bit, das der Synchronisation aller CAN-Knoten dient. Darauf folgt gleich das
-Arbitrationsfeld und dem Kontrollfeld. Abhängig vom Format bestehen
+Arbitrationsfeld und das Kontrollfeld. Abhängig vom Format bestehen
 diese aus \textbf{Basis Identifier} (11 Bits), \textbf{Extended
 Identifier} (18 Bit), einem \textbf{RTR}-Bit (remote transmission
 request; bei Remote-Frames rezessiv) sowie einem \textbf{SRR}-Bit
@@ -176,7 +176,7 @@ Kontrollfeld befindet sich neben 1-2 reservierten (aktuell nicht
 verwendeten) Bits der aus 4 Bits bestehende \textbf{DLC} (data length
 code), der die Länge des nachfolgenden \textbf{Datenfeldes} angibt.\\
 Wie bereits erwähnt können mit den Daten-Frames bis zu 8 Byte, also 64
-Bit, übertragen werden. dies kann jedoch nur in einheiten von 8 Bits
+Bit, übertragen werden. dies kann jedoch nur in Einheiten von 8 Bits
 geschehen. Anschließend an das Datenfeld ist das CRC-Feld (cyclic
 redundancy check; Prüfsummenfeld) bestehend aus 16 Bit (15 Bit + 1
 rezessives Delimiter-Bit). Des weiteren enthält ein Daten-Frame ein
@@ -195,8 +195,7 @@ aus mindestens 3 rezessiven Bits gesendet werden.
 Daten-Frames von anderen Teilnehmern angefordert werden. Der Frame
 unterscheidet sich vom Daten-Frame durch ein rezessives Bit im
 ">RTR"<-Slot, wodurch Remote-Frames im Falle einer Kollision immer
-Nachrang gegenüber den Daten-Frames haben, und durch ein Fehlen des
-Datenfeldes.
+Nachrang gegenüber den Daten-Frames haben. Außerdem hat ein Remote-Frame im Gegensatz zum Daten-Frame kein Datenfeld.
 	
 \subsubsection{Error Frame} Erkennt ein CAN-Knoten einen Fehler, so
 sendet er einen Error-Frame an alle anderen CAN-Knoten im Netzwerk.
@@ -231,7 +230,7 @@ einer Nachricht gesendet werden, sobald eben ein Fehler erkannt wurde.
 	
 Auf der Busleitung werden die einzelnen Bits der Pakete über den 
 Non-Return-to-Zero Code (NRZ) codiert. Hierbei hat jeder Wert eines Bit 
-einen konstanten Zusatand auf der Leitung (siehe Abb. \ref{nrzcode}).
+einen konstanten Zustand auf der Leitung (siehe Abb. \ref{nrzcode}).
 
 \begin{figure}[h] 
 \centering
@@ -241,7 +240,7 @@ einen konstanten Zusatand auf der Leitung (siehe Abb. \ref{nrzcode}).
 \end{figure} 
 
 Probleme bei dieser Codierung können auftreten, wenn mehrere gleiche Symbole in Folge
-gesendet werden. Abhilfe schafft hier Bit-Struffing, näheres dazu in Kapitel ~\ref{sec:security}.
+gesendet werden. Abhilfe schafft hier Bit-Stuffing, näheres dazu in Kapitel ~\ref{sec:security}.
 
 Als Vergleich zur NRZ Codierung sollte man noch den Manchester-Code erwähnen, bei dem
 jeweils eine steigende, bzw. fallende Taktflanke einen Bit-Wert repräsentiert (Abb. \ref{mancode}).
@@ -266,12 +265,12 @@ kann sich der Takt nur noch in einem spezifizierten Rahmen verschieben \citep[na
 \subsection{Buszugriffsverfahren}
 \label{sec:access}
 
-Durch die Multi-Master-Architektur des CAN-Bus kann es passieren, dass mehrere Knoten gleichzeitig veruschen
-Daten über den Bus zu senden denn jeder Knoten hat das Recht zu jederzeit und ohne Absprache Daten zu senden.
-Um dieses Szenario zu vermeiden, bzw. aufzulösen verwendet man CMSA/CA (Carrier Sense Multiple 
+Durch die Multi-Master-Architektur des CAN-Bus kann es passieren, dass mehrere Knoten gleichzeitig versuchen
+Daten über den Bus zu senden, denn jeder Knoten hat das Recht zu jederzeit und ohne Absprache Daten zu senden.
+Um dieses Szenario zu vermeiden bzw. aufzulösen, verwendet man CSMA/CA (Carrier Sense Multiple 
 Access/Collision Avoidance). Bei diesem Verfahren ``lauscht'' jeder Teilnehmer vor dem Senden ob der Bus frei ist.
 
-Sollte es durch simultanen Zugriff dennoch zu einer Collision kommen, wird durch eine bitweise Arbitrierung.
+Sollte es durch simultanen Zugriff dennoch zu einer Kollision kommen, wird eine bitweise Arbitrierung durchgeführt.
 Über den Basis Identifier im Arbitrationsfeld des Pakets wird dann entschieden, wer den Zugriff auf den Bus bekommt.
 Entscheidend ist hier, welche Nachricht die höhere Priorität besitzt, bzw. als erstes ein rezessives Bit sendet.
 
@@ -282,12 +281,12 @@ Entscheidend ist hier, welche Nachricht die höhere Priorität besitzt, bzw. als
 \label{pic:bitwise}
 \end{figure} 
 
-Abbildung \ref{pic:bitwise} zeigt ein Beispiel der bitweisen Arbitrieung. An Punkt (1) beginnen beide 
-Knoten gleichzeitig mit dem senden Ihres Identifieres. Node 2 sendet an der 5. Bistelle des Identifiers 
+Abbildung \ref{pic:bitwise} zeigt ein Beispiel der bitweisen Arbitrierung. An Punkt (1) beginnen beide 
+Knoten gleichzeitig mit dem senden Ihres Identifieres. Node 2 sendet an der 5. Bitstelle des Identifiers 
 ein dominantes Bit, wohingegen Node 1 ein rezessives Bit sendet. An diesem Punkt (2) beendet 
-Node 1 seine Übetragung und der Bus gehört Node 2.
+Node 1 seine Übertragung und der Bus gehört Node 2.
 
-Der Identifier addressiert die Nachricht und dient gleichzeitig als Priorisierung. Jeder Identifier kann 
+Der Identifier adressiert die Nachricht und dient gleichzeitig als Priorisierung. Jeder Identifier kann 
 nur einen Sender, jedoch mehrere Empfänger haben.
 
 \subsection{Sicherungsmechanismen und Fehlererkennung}
@@ -298,7 +297,7 @@ Für die Fehlererkennung stehen gleich mehrere Verfahren zur Verfügung:
 \subsubsection{Bitmonitoring}
 
 Dies ist Aufgabe des Senders. Er vergleicht ob das gesendete Bit mit dem Buspegel übereinstimmt. 
-Sollten diese nicht übereinstimmen wird mit die Fehlerbehandung eingeleitet. Auf das Arbitration Field 
+Sollten diese nicht übereinstimmen wird mit die Fehlerbehandlung eingeleitet. Auf das Arbitration Field 
 und den ACK-Slot findet dieses Verfahren keine Anwendung.
 
 \subsubsection{Stuff Check}
@@ -346,15 +345,15 @@ irrtümlicherweise geschieht.
 
 Jeder CAN-Controller besitzt eine Sendefehlerzähler (TEC, Transmit Error Counter) und einen 
 Empfängerfehlerzähler (REC, Receive Error Counter). Nach jeder erfolgreichen Übertragung eines 
-Data oder Remote Frames veringert sich der jeweilige Fehlerzähler (TEC=TEC-1; REC=REC-1). 
-Enteckt ein Knoten einen Fehler und sendet einen Error Flag wird der entsprechende Fehlerzähler 
+Data oder Remote Frames verringert sich der jeweilige Fehlerzähler (TEC=TEC-1; REC=REC-1). 
+Entdeckt ein Knoten einen Fehler und sendet einen Error Flag wird der entsprechende Fehlerzähler 
 erhöht. Hierbei gilt für den Sender: TEC=TEC+8 für den fehlererkennenden Empfänger: REC=REC+1.
 Für den Fehler verursachenden Empfänger gilt zudem REC=REC+8.
 
-Je nach höhe des Fehlerzählers gibt es verschidene Zustände des CAN-Knotens. Zu Beginn befinden
+Je nach Höhe des Fehlerzählers gibt es verschiedene Zustände des CAN-Knotens. Zu Beginn befinden
 sich alle Knoten im ``Active Error''-State. In diesem Modus werden vom CAN-Knoten Error Flags beim 
 erkennen eines Fehlers gesendet. Sollte einer der Fehlerzähler (TEC oder REC) über 127 steigen, fällt 
-der CAN-Knoten in den ``Error Passive''-State. In deisem Zustand können entdeckte Fehler lediglich 
+der CAN-Knoten in den ``Error Passive''-State. In diesem Zustand können entdeckte Fehler lediglich 
 mit sechs homogenen rezessiven Bits signalisiert werden. Fehlererkennenden Empfängern wird so die 
 Möglichkeit genommen, entdeckte Fehler zu globalisieren. Knoten, die sich im „Error Passive“-State 
 befinden, müssen beim Senden von zwei aufeinanderfolgenden Data oder Remote Frames zusätzlich 
@@ -380,7 +379,7 @@ Bei der Übertragung von CAN über Ethernet ergeben sich aufgrund der unterschie
 Funktionsweisen beider Systeme grundlegende Probleme.
 
 Bei CAN wird das zeitgleiche Senden von mehreren Stationen in Verbindung mit der
-Verwendung von dominanten und rezessiven Buspegeln benutzt um Übertragungsfehler zu
+Verwendung von dominanten und rezessiven Buspegeln benutzt, um Übertragungsfehler zu
 erkennen, bzw. dem Sender mitzuteilen, (mit ACK-Feld oder Error Frames) und den
 Buszugriff zu regeln (durch die bereits beschriebene Bus Arbitration).
 
@@ -403,7 +402,7 @@ zu kommunizieren. Typischerweise wird eine CAN Schnittstelle verwendet, um den C
 CAN-Systeme über LAN oder sogar Internet. Die CAN Schnittstelle verhält sich dabei wie 
 ein normaler CAN Knoten. \citep{STE}
 
-Die CAN Nachrichten werden vom CAN Gateway in Ethernet Packete eingepackt und dann 
+Die CAN Nachrichten werden vom CAN Gateway in Ethernet Pakete eingepackt und dann 
 über die Ethernet Verbindung gesendet. Dabei gehen jedoch wichtige Eigenschaften des 
 CAN-Busses verloren. Zum Beispiel wird das ACK-Feld im CAN-Frame nicht mehr vom 
 eigentlichen Empfänger, dem PC, sondern direkt von der CAN Schnittstelle gesetzt. Dadurch 
@@ -425,7 +424,7 @@ Die CAN Ethernet Bridge ermöglicht es, mehrere CAN Netzwerke miteinander über 
 (LAN oder Internet) zu verbinden. Abbildung \ref{bridge} zeigt zwei CAN Busse, die über 
 Ethernet miteinander verbunden sind. Die CAN Bridges verhalten sich hierbei wieder wie 
 CAN Teilnehmer. Auch hier gehen wichtige Eigenschaften des CAN-Busses, wie beispielsweise 
-das Setzen des ACK-Feldes durch den Empfänger oder das eigentliche Zeitverhalten im 
+das Setzen des ACK-Feldes durch den Empfänger, oder das eigentliche Zeitverhalten im 
 jeweiligen CAN-Bus, verloren. Denn das ACK-Feld wird direkt von der Bridge und nicht von 
 den eigentlichen Empfängern gesetzt.
 
@@ -446,7 +445,7 @@ muss.
 \subsubsection{Transparente Bridge}
 \label{l:trans}
 
-Wie bereits erwähnt, gehen bei dem bisher beschiebenen Bridge-System Eigenschaften
+Wie bereits erwähnt, gehen bei dem bisher beschriebenen Bridge-System Eigenschaften
 des CAN Bus verloren. Es stellt sich die Frage, ob es möglich ist einen CAN-Bus
 streckenweise über Ethernet zu übertragen ohne dass Teilnehmer einen Unterschied zu
 einem gewöhnlichen CAN-Bus erkennen können.
@@ -458,7 +457,7 @@ Arbitration separat für die beiden verbundenen Busse durchgeführt wird und das
 ACK-Feld bereits von den Bridges gesetzt wird.
 
 Letzteres verhindert, dass eine Station, die in ihrem CAN-Bus alleine ist, von
-Übertragunsfehlern im anderen CAN-Bus erfährt.
+Übertragungsfehlern im anderen CAN-Bus erfährt.
 
 Die separate Durchführung der Bus Arbitration kann dazu führen, dass zwei Frames, die
 in unterschiedlichen CAN-Bussen zeitgleich gesendet werden, von Stationen im eigenen
