--- a/content.tex
+++ b/content.tex
@@ -424,7 +424,7 @@ Die CAN Ethernet Bridge ermöglicht es, mehrere CAN Netzwerke miteinander über 
 zu verbinden. Abbildung \ref{bridge} zeigt zwei CAN Busse, die über 
 Ethernet miteinander verbunden sind. Die CAN Bridges verhalten sich hierbei wieder wie 
 CAN Teilnehmer. Auch hier gehen wichtige Eigenschaften des CAN-Busses, wie beispielsweise 
-das Setzen des ACK-Feldes durch den Empfänger, oder das eigentliche Zeitverhalten im 
+das Setzen des ACK-Feldes durch den Empfänger oder das eigentliche Zeitverhalten im 
 jeweiligen CAN-Bus, verloren. Denn das ACK-Feld wird direkt von der Bridge und nicht von 
 den eigentlichen Empfängern gesetzt. Bus Arbitration wird in den beiden Bussen
 getrennt durchgeführt.
@@ -527,7 +527,7 @@ Kabel einsparen.
 
 Es gibt Implementierungen sowohl für die in \ref{l:interf} beschriebene CAN
 Schnittstelle, als auch für die in \ref{l:bridge} beschriebene Ethernet Bridge. Eine
-transparente Bridge (siehe \ref{l:trans} ist uns nicht bekannt.
+transparente Bridge (siehe \ref{l:trans}) ist uns nicht bekannt.
 
 Das in \citep{STE} beschriebene Gerät kann entweder als Schnittstelle oder als Bridge
 verwendet werden.
