--- a/CAN.tex
+++ b/CAN.tex
@@ -6,10 +6,7 @@
 
 \title{CAN Bus over Ethernet}
 
-\author{R. Löffler, C. Proske, M. Sharkhawy}
-
-% Chris: 1328245
-% Raphael: 1025967
+\author{R. Löffler (1025967), C. Proske (1328245), M. Sharkhawy (1025887)}
 
 \date{\today}
 
